<?xml version="1.0"?>
<package>
  <name>wiimote_ts</name>
  <version>0.0.0</version>
  <description>The wiimote_ts package</description>

  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>


  <license>BSD</license>
  <build_depend>roscpp</build_depend>
  <build_depend>turtlesim</build_depend>
  <build_depend>wiimote</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>turtlesim</run_depend>
  <run_depend>wiimote</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
